tests/indeterminate_module_type/es_ns_after_cjs.js
// @flow
module.exports = 0;
export * as ns from "./dependency"; // error
(0: string); // error
